OpenSLP Change Log
------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

07/11/01 mpeterson@caldera.com
Applied Todd Poynor's patches to slpd_knownda.c

07/11/01 mpeterson@caldera.com
Added collation feature for SrvRqst and SrvTypeRqst

06/27/01 mpeterson@caldera.com
Applied patch to fix SEGV in SLPParseSrvURL 

06/22/01 mpeterson@caldera.com 
Added code that makes it so that no echo is made to ourself if slpd is
running as a DA

06/22/01 mpeterson@caldera.com
Fixed up logging of registration and known DAs so that logging does not
occur changes are made to the databases

*** Tag OpenSLP 0.9.1 ****

06/13/01 mpeterson@caldera.com
Fixed #417173 - Whitespace between scope fields
Fixed #417162 - Bad documentation in default slp.reg

06/12/01 mpeterson@caldera.com
Fixed #432594 - Registrations not checked for syntax
Fixed 418877 - SegV when finding attrs on certain URLS
Fixed 418894 - Escape chars as attr names kill slpd

05/31/01 mpeterson@caldera.com
Testing commits mailing list...

05/30/01 mpeterson@caldera.com
Applied BSD patch from Terry Lambert

05/10/01 rganesan@myrealbox.com
Updated NEWS.

05/10/01 rganesan@myrealbox.com
Fixed up broken SLPv1 support.

05/10/01 rganesan@myrealbox.com
Changed includes of the form "../common/header.h" to "header.h" because of
potential breakage for non source directory builds.

05/10/01 rganesan@myrealbox.com
Added a EPM slp.list.in file and updated configure.in. EPM is an Easy
Package Manager (http://www.easysw.com/epm) that allows easy creation of
different packaging formats.

04/26/01 mpeterson@caldera.com
Added more documentation to the usage output of slptool

*** Tag OpenSLP 0.9.0 ***

04/10/01 mpeterson@caldera.com